--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  flex-wrap:wrap ;
+  align-content: center;
+  justify-content: center;
 }
 
 .left {
@@ -44,6 +47,10 @@ main {
 .right {
   width: 52rem;
   font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* ELEMENTS STYLE */
@@ -128,6 +135,7 @@ h1 {
 
 .message {
   margin-bottom: 8rem;
+  margin-top: 2rem;
   height: 3rem;
 }
 
